--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "D:/Angular_Training/Inventory-Management/inventory/node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -94,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "9b6858af-30dc-4713-9d39-8b17599d0e9e"
   }
 }
